modified:   build/docker/envoy/Dockerfile 	modified:   go.mod 	modified:   go.sum 	modified:   internal/services/envoy/configs/envoy.yaml 	modified:   internal/services/moexdealing/server/init.go 	modified:   internal/services/moexdealing/server/moex.go 	modified:   internal/services/moexdealing/server/service.go

--- a/internal/services/envoy/configs/envoy.yaml
+++ b/internal/services/envoy/configs/envoy.yaml
@@ -23,7 +23,7 @@ static_resources:
                         - "*"
                       routes:
                         - match:
-                            prefix: /moex.contract.v1.moex
+                            prefix: /moex.contract.v1.dealing
                           route:
                             cluster: moex
                             timeout: 60s
@@ -35,7 +35,7 @@ static_resources:
                       "@type": type.googleapis.com/envoy.extensions.filters.http.grpc_json_transcoder.v3.GrpcJsonTranscoder
                       proto_descriptor: /etc/envoy/protos/trb_protos.pb
                       services:
-                        - moex.contract.v1.moex
+                        - moex.contract.v1.dealing
                       print_options:
                         add_whitespace: true
                         always_print_primitive_fields: true
